--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+main {
+    padding-top: 20px;
+}
+
 .header {
     background-color: lightblue;
     color: black;
@@ -9,35 +13,27 @@
     color: white;
     justify-content: center;
     display: inline-block;  
-  }
+}
 
-  .card {
+.card {
     margin: 0 0 20px 0;
     border: 2px solid grey;
-  }
+}
   
+.card-row {
+    border: 3px solid grey;
+    margin: 14px;
+    background-color: lightblue;
+    border-radius: .25rem;
+    
+
+}
   
 .card-body {
     padding: 1%;
-  }
-  
-.developer {
-    border: 1px solid red;
 }
-
+  
 .form-input {
     width: 100%;
     font-size: 1.2rem;
-}
-
-body.sunny {
-    background-image: linear-gradient(to right top, #ff4e50, #ff713e, #ff932b, #ffb41d, #f9d423);
-}
-
-.cloudy {
-    background-image: linear-gradient(to right top, #63747c, #71858e, #7f96a0, #8da8b2, #9bbac5);
-}
-
-.rainy {
-    background-image: linear-gradient(to right top, #637c7b, #718e8c, #7ea09e, #8db2b0, #9bc5c3);
 }
